[package]
name = "pathetic"
version = "0.2.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Relative URI library for Rust, based on the `url` crate"
readme = "README.md"
repository = "https://github.com/kardeiz/pathetic"
keywords = ["parser", "url", "uri"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
url = "2.1"
